--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -1,65 +1,3 @@
-<!-- formulario generado por el devise y modificado x gaspar
-<h2>Sign up</h2>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
- <form class="col s12">
-   <div class="row">
-    <div class="file-field ">
-     <i class="material-icons">face</i>
-     <%= f.label :image %><br />
-     <%= f.file_field :image %><br />
-    </div>
-   </div>
-   <div class="row">
-     <div class="input-field col s6">
-       <i class="material-icons ">account_circle</i>
-       <%= f.label :name %><br />
-       <%= f.text_field :name %><br />
-     </div>
-
-     <div class="input-field col s6">
-       <%= f.label :last_name %><br />
-       <%= f.text_field :last_name %>
-     </div>
-   </div>
-
-
-   <div class="input-field">
-     <%= f.label :user_name %><br />
-     <%= f.text_field :user_name %>
-   </div>
-
-   <div class="field">
-     <i class="material-icons">contact_mail</i>
-     <%= f.label :email %><br />
-     <%= f.email_field :email, autofocus: true %>
-   </div>
-
-   <div class="field">
-     <i class="material-icons">lock</i>
-     <%= f.label :password %>
-     <% if @minimum_password_length %>
-         <em>(<%= @minimum_password_length %> characters minimum)</em>
-     <% end %><br />
-     <%= f.password_field :password, autocomplete: "off" %>
-   </div>
-
-   <div class="field">
-     <i class="material-icons">lock</i>
-     <%= f.label :password_confirmation %><br />
-     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-   </div>
-
-   <div class="actions btn waves-effect waves-light">
-     <i class="material-icons right">send</i>
-     <%= f.submit "Sign up" %>
-   </div>
- </form>
-<% end %>
-<%= render "students/shared/links" %>
- en formulario generado por devise -->
 
 <style type="text/css">
 
@@ -101,6 +39,14 @@
 
   function fieldEmpty(valorString){
       if( valorString == null || valorString.length == 0 || /^\s+$/.test(valorString) ) {
+          return true;
+      }
+  }
+
+  function validateEmail(valorString) {
+      if( !(/\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)/.test(valorString)) ) {
+          return false;
+      }else{
           return true;
       }
   }
@@ -184,6 +130,19 @@
           aux= false;
       }
 
+
+      //obteniendo y validando la direccion
+      var inputAdress=document.getElementById("student_address");
+      var paragraphAdress=document.getElementById("paragraph_address");
+      var messageErrorAdress1="debe llenar este campo";
+      if (fieldEmpty(inputAdress.value)) {
+          paragraphAdress.innerHTML = messageErrorAdress1;
+          paragraphAdress.style.color = "red";
+          inputAdress.value = "";
+          aux = false;
+      }
+
+
       //obteniendo y validando el nombre de usuario
       var inputUserName=document.getElementById("student_user_name");
       var paragraphUserName=document.getElementById("paragraph_user_name");
@@ -201,6 +160,24 @@
           aux= false;
       }
 
+
+
+      //validando correo
+      var inputEmail=document.getElementById("student_email");
+      var paragraphEmail=document.getElementById("paragraph_email");
+      var messageErrorEmail="Email no valido";
+      if (fieldEmpty(inputEmail.value)){
+          paragraphEmail.innerHTML="debe llenar este campo";
+          paragraphEmail.style.color="red";
+          inputEmail.value="";
+          aux= false;
+      }else if ( validateEmail(inputEmail.value) ){
+          paragraphEmail.innerHTML=messageErrorEmail;
+          paragraphEmail.style.color="red";
+          inputEmail.value="";
+          aux= false;
+      }
+
        //confirmando que password sean iguales
       var inputPassword=document.getElementById("student_password");
       var paragraphPassword=document.getElementById("paragraph_password");
@@ -210,6 +187,7 @@
 
       var messageError9="su password debe contener mas de 5 caracteres";
       var messageError10="las password no son iguales";
+
       if (fieldEmpty(inputPassword.value)) {
           paragraphPassword.innerHTML = "debe llenar este campo";
           paragraphPassword.style.color = "red";
@@ -226,6 +204,14 @@
           paragraphPasswordConfirmation.style.color="red";
           inputPassword.value="";
           inputPasswordConfirmation.value="";
+          aux = false;
+      }
+
+
+      if (fieldEmpty(inputPasswordConfirmation.value)) {
+          paragraphPasswordConfirmation.innerHTML = "debe llenar este campo";
+          paragraphPasswordConfirmation.style.color = "red";
+          inputPasswordConfirmation.value = "";
           aux = false;
       }
 
@@ -266,6 +252,8 @@
                 </div>
                 <div class="input-field col s6">
                   <%= f.text_field :address, placeholder:'Address',autofocus: true, class:"active validate",  style: "margin-bottom: 0px" %>
+                  <p id="paragraph_address" class="help"></p>
+
                 </div>
               </div>
               <div class="row">
@@ -320,7 +308,7 @@
         </div>
       </div>
     </div>
-  <% end %>
+<% end %>
 </div>
 
 <%= render "students/shared/links" %>
