refactorizando delete basura in view registrations new

--- a/app/assets/stylesheets/registrations.scss
+++ b/app/assets/stylesheets/registrations.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Registrations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.help {
+  margin-left: 0px;
+  margin-top: 0;
+  font-size: 0.8em;
+  color: #777;
+
+}
+.quit-margen2-botton2{
+  margin-bottom: 0px;
+  margin-bottom: 0;
+}
