--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -50,15 +50,15 @@
               </div>
               -->
               <div class="row">
-                <div class="file-field input-field col s3">
+                <div class="file-field input-field col s12">
                   <div class="btn">
                     <i class="material-icons">add_a_photo</i>
                     <span>image</span>
                     <%= f.file_field :image , class:"active validate"%>
                   </div>
-                  <!--<div class="file-path-wrapper">
+                  <div class="file-path-wrapper">
                     <input class="file-path validate" type="text">
-                  </div>-->
+                  </div>
                 </div>
               </div>
 
