--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -8,7 +8,15 @@
       <div class="col s12 m12 l6  "  style="margin: 10% "  >
         <div class="card-panel"  >
           <div class="row">
-          <h4 class="header2">Register Student</h4>
+            <div class="col s2">
+              <label class="file-field ">
+                <input type="file" class=" hide" onchange="document.getElementById('image').src = window.URL.createObjectURL(this.files[0])">
+                <img id="image" src="<%= asset_path 'logo_perfil2.jpg'%>" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+              </label>
+            </div>
+          </div>
+          <div class="row">
+            <h4 class="header2">Register Student</h4>
           </div>
           <div class="row">
             <form class="col s12">
@@ -34,7 +42,6 @@
                   <i class="material-icons prefix">home</i>
                   <%= f.text_field :address, placeholder:'Address',autofocus: true, class:"active validate",  style: "margin-bottom: 0px" %>
                   <p id="paragraph_address" class="help"></p>
-
                 </div>
               </div>
               <div class="row">
@@ -67,11 +74,6 @@
                   <div class="file-path-wrapper">
                     <input class="file-path validate" type="text">
                   </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col s2">
-                  <img src="images/book.png" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
                 </div>
               </div>
               <div class="row">
