--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -6,7 +6,7 @@
     <div class="col">
       <!-- Form with placeholder -->
       <div class="col s12 m12 l6  "  style="margin: 10% "  >
-        <div class="card-panel"  >
+        <div class="card-panel z-depth-1 grey lighten-4 "  >
           <div class="row">
             <div class="col s2">
               <label class="file-field ">
