--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -8,10 +8,10 @@
       <div class="col s12 m12 l6  "  style="margin: 10% "  >
         <div class="card-panel z-depth-1 grey lighten-4 "  >
           <div class="row">
-            <div class="col s2">
+            <div class="col s2 offset-s5">
               <label class="file-field ">
                 <input type="file" class=" hide" onchange="document.getElementById('image').src = window.URL.createObjectURL(this.files[0])">
-                <img id="image" src="<%= asset_path 'logo_perfil2.jpg'%>" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+                <img id="image" src="<%= asset_path 'profile3.jpg'%>" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
               </label>
             </div>
           </div>
