--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -32,8 +32,8 @@
 <ul id="slide-out" class=" side-nav" >
   <li>
     <div class="userView">
-      <div class="background">
-        <img src="<%= asset_path 'office.jpg' %>"  >
+      <div class="background blue">
+        <!--<img src="<%= asset_path 'office.jpg' %>"  >-->
       </div>
       <div class="row">
         <div class="col offset-s4">
@@ -69,10 +69,10 @@
 </div>
 <!--end boton flotante  -->
 
-<div class="container">
-  <div id="card-stats">
-    <div class="row">
-      <div class="col s12 m6 l4">
+  <div class="container">
+    <div id="card-stats">
+      <div class="row">
+        <div class="col s12 m12 l4">
         <div class="card ">
           <div  onclick="redirect('template.html')">
             <i class=" col l12 m12 large material-icons white-text" style="background: #F44336;">home</i>
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+        <div class="col s12 m12 l4">
         <div class="card">
           <div >
             <i class=" col l12 m12 large material-icons white-text" style="background: #009688;">home</i>
@@ -108,7 +108,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+        <div class="col s12 m12 l4">
         <div class="card">
           <div >
             <i class=" col l12 m12 large material-icons white-text" style="background: #FFEB3B;">home</i>
@@ -126,10 +126,9 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="row">
-      <div class="col s12 m6 l4">
+      </div>
+      <div class="row">
+        <div class="col s12 m6 l4">
         <div class="card ">
           <div  onclick="redirect('template.html')">
             <i class=" col l12 m12 large material-icons white-text" style="background: #F44336;">home</i>
@@ -147,7 +146,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+        <div class="col s12 m6 l4">
         <div class="card">
           <div >
             <i class=" col l12 m12 large material-icons white-text" style="background: #009688;">home</i>
@@ -165,7 +164,7 @@
           </div>
         </div>
       </div>
-      <div class="col s12 m6 l4">
+        <div class="col s12 m6 l4">
         <div class="card">
           <div >
             <i class=" col l12 m12 large material-icons white-text" style="background: #FFEB3B;">home</i>
@@ -183,26 +182,27 @@
           </div>
         </div>
       </div>
-        <!--card   -->
-        <!--card
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src="images/office.jpg">
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-            <p><a href="#">This is a link</a></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
-          </div>
-        </div>
-        -->
-        <!--end card   -->
-
-
       </div>
+
     </div>
   </div>
+     <!--card
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="images/office.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
+        <p><a href="#">This is a link</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      </div>
+    </div>
+    -->
+      <!--end card   -->
+
+
+
 </div>
