--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,14 +3,14 @@
         $(".button-collapse").sideNav();
     });
 </script>
+
+
 <!--nav var fixed  -->
 <div class="navbar-fixed ">
   <nav>
     <div class="nav-wrapper blue">
-      <a href="#!" class="brand-logo">Logo</a>
+      <a href="#!" class="brand-logo left" style="position: relative">Home</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
-        <li><a href="badges.html">Components</a></li>
         <!--log out  and log in    -->
         <% if student_signed_in? %>
             <li>
@@ -33,7 +33,7 @@
   <li>
     <div class="userView">
       <div class="background blue">
-        <!--<img src="<%= asset_path 'office.jpg' %>"  >-->
+        <!--<img src="<%= asset_path 'office.jpg' %>"  > -->
       </div>
       <div class="row">
         <div class="col offset-s4">
@@ -72,136 +72,148 @@
   <div class="container">
     <div id="card-stats">
       <div class="row">
-        <div class="col s12 m12 l4">
-        <div class="card ">
-          <div  onclick="redirect('template.html')">
-            <i class=" col l12 m12 large material-icons white-text" style="background: #F44336;">home</i>
-            <div class="row no-pm left-align" style="margin-left: 0.5em;">
-              <b class="no-pm" style="font-size: 1.15em;">Book 1</b>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
             </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;">
-              <b class="col s6 no-pm">Nivel</b>
-              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
             </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
-              <b class="col s6 no-pm">Progreso</b>
-              <span class="col s6 no-pm" style="color: #808080;">0%</span>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s6 m6 l4">
+          <div class="card">
+            <div class="card-image waves-effect waves-block waves-light">
+              <img src="<%= asset_path 'office.jpg' %>"  >
+            </div>
+            <div class="card-content">
+              <span class="card-title activator grey-text text-darken-4">Book 1<i class="material-icons right">more_vert</i></span>
+              <p><a href="#">link book </a></p>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4">Content<i class="material-icons right">close</i></span>
+              <p>Here is some more information about this product that is only revealed once clicked on.</p>
             </div>
           </div>
         </div>
       </div>
-        <div class="col s12 m12 l4">
-        <div class="card">
-          <div >
-            <i class=" col l12 m12 large material-icons white-text" style="background: #009688;">home</i>
-            <div class="row no-pm left-align" style="margin-left: 0.5em;">
-              <b class="no-pm" style="font-size: 1.15em;">Book 2</b>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;">
-              <b class="col s6 no-pm">Nivel</b>
-              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
-              <b class="col s6 no-pm">Progreso</b>
-              <span class="col s6 no-pm" style="color: #808080;">0%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-        <div class="col s12 m12 l4">
-        <div class="card">
-          <div >
-            <i class=" col l12 m12 large material-icons white-text" style="background: #FFEB3B;">home</i>
-            <div class="row no-pm left-align" style="margin-left: 0.5em;">
-              <b class="no-pm" style="font-size: 1.15em;">Book 3</b>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;">
-              <b class="col s6 no-pm">Nivel</b>
-              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
-              <b class="col s6 no-pm">Progreso</b>
-              <span class="col s6 no-pm" style="color: #808080;">0%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-      <div class="row">
-        <div class="col s12 m6 l4">
-        <div class="card ">
-          <div  onclick="redirect('template.html')">
-            <i class=" col l12 m12 large material-icons white-text" style="background: #F44336;">home</i>
-            <div class="row no-pm left-align" style="margin-left: 0.5em;">
-              <b class="no-pm" style="font-size: 1.15em;">Book 1</b>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;">
-              <b class="col s6 no-pm">Nivel</b>
-              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
-              <b class="col s6 no-pm">Progreso</b>
-              <span class="col s6 no-pm" style="color: #808080;">0%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-        <div class="col s12 m6 l4">
-        <div class="card">
-          <div >
-            <i class=" col l12 m12 large material-icons white-text" style="background: #009688;">home</i>
-            <div class="row no-pm left-align" style="margin-left: 0.5em;">
-              <b class="no-pm" style="font-size: 1.15em;">Book 2</b>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;">
-              <b class="col s6 no-pm">Nivel</b>
-              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
-              <b class="col s6 no-pm">Progreso</b>
-              <span class="col s6 no-pm" style="color: #808080;">0%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-        <div class="col s12 m6 l4">
-        <div class="card">
-          <div >
-            <i class=" col l12 m12 large material-icons white-text" style="background: #FFEB3B;">home</i>
-            <div class="row no-pm left-align" style="margin-left: 0.5em;">
-              <b class="no-pm" style="font-size: 1.15em;">Book 3</b>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;">
-              <b class="col s6 no-pm">Nivel</b>
-              <span class="col s6 no-pm" style="color: #808080;">Básico</span>
-            </div>
-            <div class="row no-pm left-align" style="margin-left: -0.25em;margin-bottom: 0.25em;">
-              <b class="col s6 no-pm">Progreso</b>
-              <span class="col s6 no-pm" style="color: #808080;">0%</span>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
+
+
 
     </div>
   </div>
-     <!--card
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="images/office.jpg">
-      </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-        <p><a href="#">This is a link</a></p>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-        <p>Here is some more information about this product that is only revealed once clicked on.</p>
-      </div>
-    </div>
-    -->
-      <!--end card   -->
+
 
 
 
