center username and email in template home sidenav

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -39,8 +39,9 @@
         <div class="col offset-s4">
           <img class="circle " src=" <%=  current_student.get_base64_image %> " >
         </div>
-        <span class="white-text name"><%=current_student.user_name%></span>
       </div>
+      <span class="white-text name center-align"><%=current_student.user_name%></span>
+      <span class="white-text name center-align" ><%=current_student.email%></span>
     </div>
   </li>
   <li>
