--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
   <body>
     <%= yield %>
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <!--<p class="alert"><%= alert %></p>-->
   </body>
 </html>
