--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -17,7 +17,7 @@
             </div>
           </div>
           <div class="row">
-            <h4 class="header2">Register Student</h4>
+            <h4 class="center header2">Register Student</h4>
           </div>
           <div class="row">
             <form class="col s12">
